# resonance-logs-cn

./: .gitignore  CHANGELOG.md  CHANGELOG_FORK.md  README.md  README_EN.md  TODO.md  package-lock.json  package.json  scan_manifest.json  source_meta.json  svelte-check-report-2.txt  svelte.config.js  vite.config.ts
.github/workflows/: main.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
.svelte-kit/types/: route_meta_data.json
doc/: README.md  faq.md
doc/changelog/: README.md  v0.0.8.md  v0.0.9.md  v0.1.1.md
doc/en-US/: README.md  faq.md  getting-started.md
doc/en-US/changelog/: README.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md  v0.0.6.md  v0.0.7.md  v0.0.8.md  v0.0.9.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.9.md  v0.2.0.md
doc/en-US/faq/: app-runtime.md  dps-layout.md  live-monitor.md  module-calc.md  (+1 more)
doc/faq/: #U5b9e#U65f6#U76d1#U63a7.md  #U602a#U7269#U76d1#U63a7.md  #U6a21#U7ec4#U8ba1#U7b97.md  DPS#U4e0e#U5e03#U5c40.md  应用运行.md  怪物监控.md
doc/features/: dps.md
doc/ja-JP/: README.md  faq.md  getting-started.md
doc/zh-CN/: README.md  faq.md  getting-started.md
docs/: SIDECAR_PROTOCOL.md  VOICE_MODEL_MANIFEST.md  voice-model-manifest.json  voice-model-manifest.public-key
parser-data/: README.md
parser-data/app-rules/: class_resources.json  class_skill_configs.json  counter_rules.json  counter_slot_templates.json  counter_source_templates.json
parser-data/logic/: DamageFormula.json  ExtraBuffMonitoredMonsters.json  SkillEffectTable.json  TempAttrTable.json
scripts/: analyze-buff-effect-surface.mjs  analyze-game-formula-sources.mjs  analyze-modifier-uptime-skill-activity.mjs  analyze-opaque-buff-sources.mjs  analyze-runtime-source-bridge.mjs  audit-battle-imagine-tier-source-bridge.mjs  audit-container-probe-path-differential.mjs  audit-container-probes.mjs  audit-direct-attribution.mjs  audit-flat-attack-isolation-windows.mjs  audit-flat-attack-replay-blockers.mjs  audit-flat-attack-stack-correlates.mjs  audit-flat-attack-stat-snapshot.mjs  audit-flat-attack-state-selector.mjs  audit-formula-readiness-resolver.mjs  audit-formula-replay-evidence.mjs  audit-generated-locale-coverage.mjs  audit-global-modifier-coverage.mjs  audit-lucky-strike-formula.mjs  audit-modifier-bridge-candidates.mjs  audit-modifier-contribution-prototype.mjs  audit-modifier-expected-value.mjs  audit-modifier-hit-count-proof.mjs  audit-modifier-label-formula-buckets.mjs  audit-modifier-ownership-bridge.mjs  audit-modifier-promotion-review.mjs  audit-modifier-scope-proof.mjs  audit-modifier-source-blocker-context.mjs  audit-modifier-source-labels.mjs  audit-modifier-stack-proof.mjs  audit-modifier-stat-conversion-proof.mjs  audit-modifier-static-blockers.mjs  audit-modifier-term-proof.mjs  audit-modifier-tier-proof.mjs  audit-observed-only-replay-context.mjs  audit-observed-only-source-bridges.mjs  audit-runtime-localization-gaps.mjs  audit-runtime-tier-bridge.mjs  audit-season3-imagine-clues.mjs  audit-seasonal-factor-differential.mjs  (+55 more)
scripts/overrides/: monster_id_name_type_overrides.json
scripts/overrides_en/: monster_id_name_type_overrides.json
scripts/overrides_jp/: monster_id_name_type_overrides.json
src/: animate-probe.css  app.css  app.html  plain-probe.css  tailwind-probe.css  typography-probe.css
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json  event-logger.json  game-overlay.json  live.json  main.json  minimap-overlay.json  monster-overlay.json
src-tauri/meter-data/: FantasyMonsterSkillMap.json  MonsterIdNameType.json  MonsterIdType.json  RecountTable.json  ResetIgnoreTargets.json  SceneName.json  SkillEffectTable.json  TempAttrTable.json
src-tauri/native/qwen3-tts/: CMakeLists.txt  LICENSE  NOTICE.md  OPTIMIZATION.md  README.md  UPSTREAM.md
src-tauri/native/qwen3-tts/docs/: SIDECAR_PROTOCOL.md  WINDOWS_BUILD.md  benchmark_pytorch_vs_cpp.json  model_inspection.txt  tensor_mapping.md
src-tauri/native/qwen3-tts/ggml/: CMakeLists.txt
src-tauri/native/qwen3-tts/src/: audio_tokenizer_decoder.cpp  audio_tokenizer_encoder.cpp  audio_validate.cpp  audio_validate.h  fs_util.cpp  fs_util.h  gguf_loader.cpp  gguf_loader.h  json_lite.h  main.cpp  qwen3_tts.cpp  qwen3_tts.h  qwen3tts_c_api.cpp  sha256.cpp  sha256.h  sidecar_main.cpp  text_tokenizer.cpp  tts_transformer.cpp  tts_transformer.h  voice_profile.cpp  voice_profile.h
src-tauri/native/qwen3-tts/tests/: invalid_protocol_job.json  test_audio_validate.cpp  test_decoder.cpp  test_encoder.cpp  test_json_lite.cpp  test_require.h  test_tokenizer.cpp  test_transformer.cpp  test_voice_profile.cpp
src-tauri/src/: build_app.rs  lib.rs  packets.rs  parser_data.rs  translation_runtime.rs
src-tauri/src/module_optimizer/cpp/: CMakeLists.txt  ffi_bridge.cpp  ffi_bridge.h  module_optimizer.cpp  module_optimizer.h  module_optimizer_cuda.cu  module_optimizer_opencl.cpp
src/lib/: api.ts  bindings.ts  challenge-presets.ts  class-labels.ts  column-data.ts  custom-definitions-store.ts  custom-panel-utils.ts  custom-trigger-audio.ts  custom-trigger-resolver.ts  custom-trigger-runtime.svelte.ts  custom-trigger-types.ts  custom-triggers-store.ts  damage-formula.ts  damage-type.ts  death-replay-compat.ts  event-logger-types.ts  event-logger-window.ts  fantasy-icons.ts  gear-stat-decoder.generated.ts  gear-stat-decoder.ts  history-modifier-report-display.ts  history-modifier-report-fast.ts  history-modifier-report-worker-client.ts  history-modifier-report.ts  history-modifier-report.worker.ts  i18n.ts  live-derived.ts  live-header-layout.ts  live-meter-profile.svelte.ts  live-meter-profile.test.ts  loadout-import.test.ts  loadout-import.ts  loadout-lifecycle.test.ts  loadout-lifecycle.ts  loadouts.svelte.ts  locale-bundles.ts  monster-mappings.ts  name-display.ts  overlay-custom-font.svelte.ts  overlay-text-style.ts  (+17 more)
src/routes/: +layout.svelte  overlay-edit-theme.css
static/data/: resonance_skill_search.json
static/workers/: history-modifier-report.worker.js
(+762 files in other folders)
